fix infinite overflow

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,12 +1,13 @@
 html {
   height: 100%;
   background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-}
+overflow: hidden;}
 
 body {
   width: 0px;
   padding: 0px;
   background: #0C112B;
+  
 }
 
 .holder {
